<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="title_search">Поиск вакансий</string>
    <string name="title_filter">Настройки фильтрации</string>
    <string name="title_place_of_work">Выбор места работы</string>
    <string name="title_country">Выбор страны</string>
    <string name="title_region">Выбор региона</string>
    <string name="title_industry">Выбор отрасли</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_team">Команда</string>
    <string name="title_vacancy">Вакансия</string>
    <string name="title_main">Главная</string>
    <string name="team_section_title">Над приложением\nработали</string>
    <string name="team_member_lebedev">Сергей Лебедев</string>
    <string name="team_member_fomenkova">Анастасия Фоменкова</string>
    <string name="team_member_koposova">Елизавета Копосова</string>
    <string name="team_member_kovalevich">Виталий Ковалевич</string>
    <string name="open_search_filters">Открыть фильтры поиска</string>
    <string name="enter_query">Введите запрос</string>
    <string name="search_results_are_empty">Ничего не найдено</string>
    <string name="no_internet">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="load_list_error">Не удалось получить список вакансий</string>
    <string name="no_vacancy">Таких вакансий нет</string>
    <string name="experience_title">Требуемый опыт</string>
    <string name="vacancy_description_title">Описание вакансии</string>
    <string name="skills_title">Ключевые навыки</string>
    <string name="contacts_title">Контакты</string>
    <string name="error_unable_to_retr_vac_list">Не удалось получить список вакансий</string>
    <string name="error_empty_vacancy_list">Cписок пуст</string>
    <string name="vacancy_not_found">Вакансия не найдена или удалена </string>
    <string name="salary_not_specified">Зарплата не указана </string>
    <string name="check_internet_connection">Проверьте подключение к интернету</string>
    <string name="error_occurred">Произошла ошибка</string>
    <string name="enter_Industry">Введите отрасль</string>
    <string name="no_industries_available">Нет доступных отраслей</string>
    <string name="industries_load_error">Ошибка загрузки отраслей</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="do_not_show_without_salary">Не показывать без зарплаты</string>
    <string name="reset">Сбросить</string>
    <string name="apply">Применить</string>
    <string name="no_industries">Такой отрасли нет</string>
    <string name="place_of_work">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="salary_expected">Ожидаемая зарплата</string>
    <string name="country">Страна</string>
    <string name="region">Pегион</string>
    <string name="select">Выбрать</string>
    <string name="countries_list_error">Не удалось получить список</string>
    <string name="enter_region">Введите регион</string>
    <string name="regions_load_error">Не удалось получить список</string>
    <string name="no_regions">Такого региона нет</string>
</resources>
