<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="0dp"
        android:layout_height="64dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/toolbarTitle"
            style="@style/Tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/padding_16"
            android:text="@string/title_team" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/contentContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_16"
        android:paddingTop="@dimen/padding_24"
        android:paddingBottom="@dimen/padding_16"
        app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/teamHeader"
            style="@style/SectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/team_section_title"/>


        <TextView
            android:id="@+id/member1"
            style="@style/TeamMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_24"
            android:text="@string/team_member_lebedev" />

        <TextView
            android:id="@+id/member2"
            style="@style/TeamMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            android:text="@string/team_member_fomenkova" />

        <TextView
            android:id="@+id/member3"
            style="@style/TeamMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            android:text="@string/team_member_koposova" />

        <TextView
            android:id="@+id/member4"
            style="@style/TeamMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16"
            android:text="@string/team_member_kovalevich" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
