<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/padding_16"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:paddingVertical="@dimen/padding_12"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/filter_title"
        style="@style/Tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_16"
        android:paddingTop="@dimen/padding_19"
        android:paddingBottom="@dimen/padding_19"
        android:text="@string/title_filter"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/place_of_work"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="@dimen/padding_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_title">

        <LinearLayout
            android:id="@+id/place_of_work_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/place_of_work_hint"
                style="@style/TextAppearance.Regular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_of_work"
                android:textColor="?attr/colorPrimary" />

            <TextView
                android:id="@+id/place_of_work_item"
                style="@style/TextAppearance.Regular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                tools:text="Россия, Москва" />
        </LinearLayout>

        <TextView
            android:id="@+id/place_of_work_unselected"
            style="@style/TextAppearance.Regular16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_of_work"
            android:textColor="?attr/colorSecondary"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/place_of_work_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_24px"
            android:tint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/industry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_of_work">

        <LinearLayout
            android:id="@+id/industry_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/industry_hint"
                style="@style/TextAppearance.Regular12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/industry"
                android:textColor="?attr/colorPrimary" />

            <TextView
                android:id="@+id/industry_item"
                style="@style/TextAppearance.Regular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorPrimary"
                tools:text="IT" />
        </LinearLayout>

        <TextView
            android:id="@+id/industry_unselected"
            style="@style/TextAppearance.Regular16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/industry"
            android:textColor="?attr/colorSecondary"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/place_of_work_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_24px"
            android:tint="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/input_salary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_field"
        android:backgroundTint="?attr/customEditTextBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/industry">

        <TextView
            android:id="@+id/salary_expected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginTop="@dimen/padding_8"
            android:text="@string/salary_expected"
            android:textAppearance="@style/TextAppearance.Regular12"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/salary_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:backgroundTint="?attr/customEditTextBackground"
            android:paddingBottom="@dimen/padding_8"
            android:text="@string/enter_amount"
            android:textAppearance="@style/TextAppearance.Regular16"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/salary_expected" />

        <ImageButton
            android:id="@+id/btn_clear_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_12"
            android:backgroundTint="?attr/customEditTextBackground"
            android:src="@drawable/ic_clear"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_salary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_show_without_salary"
            android:textAppearance="@style/TextAppearance.Regular16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height"
            android:background="@drawable/checkbox_selector"
            android:buttonTint="?attr/BottomNavEnabled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:text="@string/reset"
        android:textAppearance="@style/TextAppearance.Medium16"
        android:textColor="?attr/ToastBackgroundColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:backgroundTint="?attr/BottomNavEnabled"
        android:text="@string/apply"
        android:textAppearance="@style/TextAppearance.Medium16"
        android:textColor="?attr/toastAndButtonTextColor"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/btn_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
