<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_16"
    android:paddingBottom="@dimen/padding_8">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:padding="8dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Tittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_industry"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="19dp"
        android:autofillHints="search | jobTitle"
        android:background="@drawable/edit_text_field"
        android:backgroundTint="@null"
        android:hint="@string/enter_Industry"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lines="1"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="50dp"
        android:textColor="@color/black"
        android:textColorHint="?attr/customEditTextHintColor"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <ImageView
        android:id="@+id/drawable_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_16"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/search_input"
        app:layout_constraintEnd_toEndOf="@+id/search_input"
        app:layout_constraintTop_toTopOf="@+id/search_input"
        tools:ignore="ContentDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_industries"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_input"
        tools:listitem="@layout/industry_item" />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:backgroundTint="?attr/BottomNavEnabled"
        android:text="@string/select"
        android:textAppearance="@style/TextAppearance.Medium16"
        android:textColor="?attr/toastAndButtonTextColor"
        android:visibility="gone"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_error"
        style="@style/Tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/industries_load_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_input" />

</androidx.constraintlayout.widget.ConstraintLayout>
